--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </div>
       <div class="people">
         <label for="num-people">Number of People</label>
+        <p class="error-message">Can't be zero</p>
         <input type="number" name="num-people" id="num-people" value="5">
         <img src="./images/icon-person.svg" alt="person icon" id="person">
       </div>
