add js script tag

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <button class="tip-button" id="fifthteen-percent">15%</button>
           <button class="tip-button" id="twentyfive-percent">25%</button>
           <button class="tip-button" id="fifty-percent">50%</button>
-          <input class="tip-button"type="number" id="custom-percent" placeholder="Custom">
+          <input class="tip-button" type="number" id="custom-percent" placeholder="Custom">
         </div>
       </div>
       <div class="people">
@@ -48,5 +48,6 @@
         <button id="reset">Reset</button>
       </div>
   </main>
+  <script src="./index.js"></script>
 </body>
 </html>
