--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="people">
         <label for="num-people">Number of People</label>
         <p class="error-message">Can't be zero</p>
-        <input type="number" name="num-people" id="num-people" value="5">
+        <input type="number" name="num-people" id="num-people">
         <img src="./images/icon-person.svg" alt="person icon" id="person">
       </div>
     </div>
