--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
         <button class="tip_button">50%</button>
         <input class="tip_button" type="number" id="custom_percent" placeholder="Custom">
     </div>
-      <label for="num-people">Number of People</label>
-      <input type="number" name="num-people" id="num-people">
+      <label for="num_people">Number of People</label>
+      <input type="number" name="num_people" id="num_people">
   </div>
     <div class="total">
-        <p class="amount">Tip Amount</p>
+        <p class="amount">Tip Amount</p> <span class="tip_total"></span>
         <p class="per_person">/ person</p>
-        <p class="tip_total" id="tip_person"></p>
         <p class="amount">Total</p>
         <p class="per_person">/ person</p>
         <p class="tip_total" id="total_person"></p>
