change tip total parragraph to span

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
     <div class="total">
         <p class="amount">Tip Amount</p> <span class="tip_total"></span>
         <p class="per_person">/ person</p>
-        <p class="amount">Total</p>
+        <p class="amount">Total</p><span class="tip_total" id="total_person"></span>
         <p class="per_person">/ person</p>
-        <p class="tip_total" id="total_person"></p>
       <button id="reset">Reset</button>
     </div>
     </div>
